# chaoxing

./: .gitignore  API测试完成报告.md  CI_TROUBLESHOOTING.md  Celery异步修复和详细进度完成.txt  DOCKER_README.txt  ENVIRONMENT_SETUP.md  FINAL_SUMMARY.md  PLATFORMS_SUPPORT.md  QUICK_START.md  README.md  README_REFINE.md  REFINE_TESTING_GUIDE.md  REFINE_VERSION_COMPLETE.md  RELEASE_DOWNLOAD.md  SCRIPTS_GUIDE.md  SMTP配置指南.txt  SSL连接错误修复.txt  UNIFIED_ENVIRONMENT_COMPLETE.md  ZERO_CONFIG_START.md  config_template.ini  daemon_control.bat  daemon_control.sh  main.py  package-lock.json  pyproject.toml  pytest.ini  requirements-full.txt  requirements-minimal.txt  requirements.txt  setup_env.bat  setup_env.sh  start_all.bat  start_all.sh  一键安装.bat  一键安装.sh  任务创建422错误修复.txt  启动Refine完整版.bat  完成说明.txt  导入错误和弹窗修复.txt  开始使用.txt  (+12 more)
api/: answer.py  answer_check.py  base.py  captcha.py  config.py  config_validator.py  cookies.py  course_processor.py  cxsecret_font.py  decode.py  font_decoder.py  http_client.py  logger.py  notification.py  process.py  secure_config.py
docs/: API.md  ARCHITECTURE.md  BAOTA_1PANEL_DEPLOY.md  CHANGELOG.md  CI_CD_ENHANCEMENT.md  CODE_STYLE.md  CONFIGURATION.md  CREDITS.md  DAEMON.md  DAEMON_QUICK_REF.md  DATABASE.md  DATABASE_CONFIG_WEB.md  DATABASE_MIGRATION.md  DEPENDENCY_INSTALLATION.md  DEPLOYMENT_MODES.md  DEVELOPMENT.md  DOCKER_SETUP.md  FAQ.md  INDEX.md  NEW_FEATURES.md  PROJECT_STRUCTURE.md  QUICK_DEPLOY.md  QUICK_START.md  README.md  RELEASE_GUIDE.md  SECURITY.md  SUMMARY.md  UPGRADE_GUIDE.md
k8s/: README.md  backend-deployment.yaml  celery-deployment.yaml  configmap.yaml  hpa.yaml  ingress.yaml  namespace.yaml  postgres-deployment.yaml  (+3 more)
(+166 files in other folders)
