[project]
name = "chaoxing"
version = "2.5.7"
description = "超星学习通/超星尔雅/泛雅超星全自动无人值守完成任务点"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<4.0"

# 注意: 此文件仅包含基础依赖，完整依赖请查看 requirements.txt
# 使用 pip install -r requirements.txt 安装所有依赖
dependencies = [
    # 核心依赖
    "argparse>=1.4.0",
    "beautifulsoup4>=4.12.3",
    "cryptography>=44.0.0",
    "ddddocr==1.5.6",
    "fonttools>=4.54.1",
    "httpx>=0.27.2",
    "loguru>=0.7.3",
    "lxml>=5.3.0",
    "pyaes>=1.6.1",
    "requests>=2.32.3",
    "urllib3>=2.2.3",
    
    # Web平台依赖
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.1",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.6.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "email-validator>=2.2.0",
    "websockets>=13.1",
    "aiohttp>=3.10.10",
    "python-dotenv>=1.0.1",
    
    # 任务队列
    "celery>=5.4.0",
    
    # 可选依赖（根据需要安装）
    # "redis>=5.1.1",  # 标准模式需要
    # "asyncpg>=0.30.0",  # PostgreSQL异步驱动
    # "psycopg2-binary>=2.9.10",  # PostgreSQL同步驱动
    # "aiosqlite>=0.20.0",  # SQLite异步驱动
    # "openai>=1.56.0",  # AI题库
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "black>=24.10.0",
    "flake8>=7.1.1",
    "ruff>=0.8.4",
]
postgresql = [
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
]
redis = [
    "redis>=5.1.1",
]
sqlite = [
    "aiosqlite>=0.20.0",
]
